# nisar_pytools

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CLAUDE.md  LICENSE.txt  MANIFEST.in  README.md  codereview.md  environment.yml  pyproject.toml
.github/workflows/: ci.yml  publish.yml
figures/isce3_comparisons/: SUMMARY.md
notebooks/: example.ipynb
scripts/: readme_examples.py  test_end_to_end.py  test_search.py  validate_against_gunw.py
scripts/isce3/: compare_gslcs.py  compare_gunw.py  compare_three_way.py  fetch_dem.py  gslc_path.py  gslc_runconfig.yaml  plot_compare.py  plot_isce3_vs_jpl.py  plot_pytools_vs_jpl.py  plot_three_way.py  plot_two_way.py  run_insar.sh  runconfig.yaml  test_goldstein.py  test_set_correction.py  verify_crossmul.py
slidedecks/: isce3_vs_production.pptx
src/nisar_pytools/: __init__.py  cli.py
src/nisar_pytools/io/: __init__.py  _download.py  _export.py  _h5_to_datatree.py  _reader.py  _search.py  _stack.py  download.py  export.py  h5_to_datatree.py  reader.py  search.py  stack.py
src/nisar_pytools/processing/: __init__.py  atmospheric.py  baseline.py  filtering.py  isce3_runconfig_default.yaml  isce3_tools.py  phase_linking.py  polsar.py  prep_dolphin.py  sar.py
src/nisar_pytools/utils/: _validation.py  conversion.py  dem.py  filename.py  local_incidence_angle.py  masking.py  metadata.py  overlap.py  search_validation.py  validation.py
src/nisar_pytools/viz/: __init__.py  plotting.py
tests/: conftest.py  test_atmospheric.py  test_baseline.py  test_cli.py  test_conversion.py  test_dem.py  test_download.py  test_export.py  test_filename.py  test_filtering.py  test_h5_to_datatree.py  test_isce3_tools.py  test_local_incidence_angle.py  test_masking.py  test_metadata.py  test_overlap.py  test_phase_linking.py  test_polsar.py  test_prep_dolphin.py  test_reader.py  test_sar.py  test_search.py  test_search_validation.py  test_stack.py  test_validation.py  test_viz.py
