[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nisar_pytools"
version = "0.1.0"
description = "Open source Python tools for working with NISAR datasets"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "dask[array]>=2024.0",
    "h5py>=3.10",
    "numpy>=1.24",
    "rasterio>=1.3",
    "rioxarray>=0.15",
    "xarray>=2024.10",
]

[project.optional-dependencies]
dev = [
    "nbstripout",
    "pre-commit",
    "pytest",
    "ruff",
]
notebooks = [
    "jupyter",
    "matplotlib",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: marks tests requiring real NISAR files (deselect with '-m \"not integration\"')",
]
