[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nisar-pytools"
dynamic = ["version"]
description = "Open source Python tools for working with NISAR datasets"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Zachary Hoppinen", email = "zachary.hoppinen@gmail.com" },
]
keywords = ["nisar", "sar", "insar", "radar", "remote-sensing", "hdf5", "xarray"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Scientific/Engineering :: Image Processing",
]
dependencies = [
    "asf_search>=7.0",
    "dask[array]>=2024.0",
    "h5py>=3.10",
    "numpy>=1.24",
    "pyproj>=3.4",
    "pyyaml>=6.0",
    "rasterio>=1.3",
    "requests",
    "rioxarray>=0.15",
    "scipy>=1.10",
    "shapely>=2.0",
    "snaphu>=0.3",
    "xarray>=2024.10",
]

[project.optional-dependencies]
dem = [
    "dem_stitcher",
]
dolphin = [
    "dolphin-sar",
]
isce3 = [
    # PyPI-installable runtime deps for nisar.workflows.insar
    # (used by nisar_pytools.processing.rslc_to_gunw).
    # The isce3 binding itself + libgdal-hdf5 are conda-forge only --
    # see the rslc_to_gunw docstring for the full mamba command.
    "snaphu>=0.4",
    "pygrib>=2.1",
    "pyaps3>=0.3",
    "RAiDER>=0.6",
    "pysolid>=0.3",
    "netCDF4>=1.6",
]
dev = [
    "build",
    "nbstripout",
    "pre-commit",
    "pytest",
    "ruff",
    "twine",
]
notebooks = [
    "jupyter",
    "matplotlib",
]
viz = [
    "matplotlib",
]
all = [
    "nisar-pytools[dem,dolphin,notebooks,viz]",
]

[project.scripts]
nisar_pytools = "nisar_pytools.cli:main"

[project.urls]
Homepage = "https://github.com/zmhoppinen/nisar_pytools"
Repository = "https://github.com/zmhoppinen/nisar_pytools"
Issues = "https://github.com/zmhoppinen/nisar_pytools/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"nisar_pytools.processing" = ["*.yaml"]

[tool.setuptools_scm]
# Version is derived from git tags (e.g. v0.2.0). Between tags
# setuptools-scm produces a dev version like 0.2.1.dev3+g<sha>.
# The generated file is gitignored; it's written at build/install time
# and imported by nisar_pytools/__init__.py to expose __version__.
version_file = "src/nisar_pytools/_version.py"
# Used when there's no git history (e.g. installing from a sdist tarball).
fallback_version = "0.0.0+unknown"

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: marks tests requiring real NISAR files (deselect with '-m \"not integration\"')",
]
filterwarnings = [
    "ignore:Consolidated metadata:UserWarning",
]
